manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: block-buster
  name: block-buster-service
  namespace: dev-demo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: block-buster
    version: 7.8.x
    env: dev
  type: ClusterIP
